[FIX] input focus on mobile

--- a/src/containers/Customers/Form/form.sass
+++ b/src/containers/Customers/Form/form.sass
@@ -11,7 +11,6 @@
     font-weight: 300
     max-width: 18rem
     padding: 1rem
-    user-select: none
     width: 100%
     -moz-appearance: none
     -webkit-appearance: none
